19-ingress/ingress-todo.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoingress
  namespace: default
spec:
  rules:
  - host: todoapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todosvc
            port:
              number: 80
